--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="container">
+            <div class="side-nav"></div>
+            <div class="nav"></div>
+            <div class="side-nav"></div>
+        </div>
+    </nav>
+
+
 </body>
 </html>
