--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         </div>
     </nav>
 
+    <header>
+        <div class="container">
+            <div class="main-header"></div>
+        </div>
+      </header>
 
 </body>
 </html>
