--- a/index.html
+++ b/index.html
@@ -19,7 +19,38 @@
         <div class="container">
             <div class="main-header"></div>
         </div>
-      </header>
+    </header>
+
+    <main>
+        <section>
+            <div class="container">
+                <div class="dodgerblue"></div>
+                <div class="pink"></div>
+            </div>
+        </section>
+      
+        <section class="bg-lightgrey">
+            <div class="container">
+                <div class="pink"></div>
+                <div class="dodgerblue"></div>
+            </div>
+        </section>
+      
+        <section>
+            <div class="container">
+                <div class="dodgerblue"></div>
+                <div class="pink"></div>
+            </div>
+        </section>
+
+        <section class="bg-lightgrey">
+            <div class="container">
+                <div class="square-green"></div>
+            </div>
+        </section>
+      </main>
+
+      <footer></footer>
 
 </body>
 </html>
