--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <div class="container">
             <div class="side-nav"></div>
-            <div class="nav"></div>
+            <div class="center-nav"></div>
             <div class="side-nav"></div>
         </div>
     </nav>
@@ -50,7 +50,25 @@
         </section>
       </main>
 
-      <footer></footer>
+      <footer>
+        <div class="container">
+            <div class="left-footer"></div>
+            <div class="right-footer">
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+        </div>
+        <div class="breakline"></div>
+
+        <div class="container">
+            <div class="bottom-footer">
+                <div class="button left"></div>
+                <div class="button right"></div>
+            </div>
+        </div>
+      </footer>
 
 </body>
 </html>
