--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
     <main>
         <section>
             <div class="container">
-                <div class="dodgerblue"></div>
-                <div class="pink"></div>
+                <div class="large-box"></div>
+                <div class="small-box"></div>
             </div>
         </section>
       
         <section class="bg-lightgrey">
             <div class="container">
-                <div class="pink"></div>
-                <div class="dodgerblue"></div>
+                <div class="small-box"></div>
+                <div class="large-box"></div>
             </div>
         </section>
       
         <section>
             <div class="container">
-                <div class="dodgerblue"></div>
-                <div class="pink"></div>
+                <div class="large-box"></div>
+                <div class="small-box"></div>
             </div>
         </section>
 
@@ -48,27 +48,29 @@
                 <div class="square-green"></div>
             </div>
         </section>
-      </main>
+    </main>
 
-      <footer>
-        <div class="container">
-            <div class="left-footer"></div>
-            <div class="right-footer">
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
-                <div class="col"></div>
+    <footer class="primary">
+       <div class="container">
+           <div class="left-footer"></div>
+           <div class="right-footer">
+              <div class="col"></div>
+              <div class="col"></div>
+              <div class="col"></div>
+              <div class="col"></div>
             </div>
-        </div>
-        <div class="breakline"></div>
+       </div>
+       <div class="breakline"></div>
+    </footer>
 
+    <footer class="secondary">
         <div class="container">
-            <div class="bottom-footer">
+            <div class="secondary-footer">
                 <div class="button left"></div>
                 <div class="button right"></div>
             </div>
         </div>
-      </footer>
+    </footer>
 
 </body>
 </html>
